openshift/base/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: bookstore
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore
      tier: database
  template:
    metadata:
      labels:
        app: bookstore
        tier: database
    spec:
      securityContext:
        runAsUser: 0
        privileged: true
      containers:
      - name: mysql
        image: docker.io/ahmedhusseinabdelkader/bookstore-db:v1
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: "300m"
            memory: "200Mi"
          requests:
            cpu: "200m"
            memory: "150Mi"
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping", "-h", "localhost"]
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: bookstore
    tier: database
